# tutorial

./: .gitignore  Makefile  README.md  classifier.ipynb  data-gen.ipynb  data-prep.ipynb  generational.csv  navigating_data_errors_tutorial_part1_data_errors.ipynb  navigating_data_errors_tutorial_part2a_with_pipeline.ipynb  navigating_data_errors_tutorial_part2b_with_dataframes.ipynb  part1-data-errors.ipynb  part2-with-dataframes.ipynb  part2-with-pipeline.ipynb  part2a-with-pipeline.ipynb  part2b-with-dataframes.ipynb  pyproject.toml  requirements.txt  setup.py  synthetic_letters.csv  synthetic_letters_text_only.csv  synthetic_letters_with_attributes.csv
nde/: dataframes.py  importances.py  utility.py
