[project]
name = "nde"
version = "0.1.0"
description = "A minimal Python project"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
requires-python = ">=3.9"
dependencies = [    
    "datascope==0.0.32",
    "sentence-transformers==3.4.1",
    "pandas==2.2.2",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "seaborn==0.13.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
